Edit Secret Data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ security.jwt.expiration-time=3600000
 # Mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=boomkeam123@gmail.com
-spring.mail.password=gbyg kcsf llyw trmp
+spring.mail.username=<YOUR GMAIL>
+spring.mail.password=<YOUR GOOGLE APP PASSWORD>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
